Updated the README.

--- a/README.textile
+++ b/README.textile
@@ -17,6 +17,18 @@ Though oUF_Adirelle embeds and uses some libraries, they are all optional and
 could be safely removed (just delete the "libs" directory). Please note LibMovable-1.0
 is required for the "/oufa" chat command.
 
+h2. Cataclysm update status
+
+DONE:
+* use the built-in API to guess character roles, including the result of raid rolechecks,
+* get rid of LibHealComm-4.0 use the built-in API for incoming heals,
+
+TODO:
+* Moonkins' Eclipse bar
+* Warlocks' Soul Shards
+* Paladins' Holy Power
+* fix special auras handling.
+
 h2. Features
 
 h3. Common features
