--- a/README.textile
+++ b/README.textile
@@ -1,21 +1,14 @@
 oUF_Adirelle provides both raid and single unit frames built on top of "oUF":http://www.wowinterface.com/downloads/info9994-oUF.html.
 
-This addon has been originally written for personal use and taste.
-It borrows ideas from existing raid and unit frame addons.
+This addon has been originally written for personal use and taste. It borrows ideas from existing raid and unit frame addons.
 
-It has been tested and includes specific settings for the following classes:
-hunter, druid, paladin, warlock, priest, shaman, death knight. It should
-obviously work fine with other classes as well.
+It has been tested and includes specific settings for the following classes: hunter, druid, paladin, warlock, priest, shaman, death knight. It should work fine with other classes as well.
 
-I do not plan to add configuration options. Nevertheless, one can move
-and resize the frames using the "/oufa" chat command.
+I do not plan to add configuration options. Nevertheless, one can move, resize and even disable the frames using the "/oufa" chat command.
 
-Single unit frames and party/raid unit frames could be disabled separately by
-disabling corresponding addons.
+Single unit frames and party/raid unit frame sets could be disabled by disabling corresponding addons. 
 
-Though oUF_Adirelle embeds and uses some libraries, they are all optional and
-could be safely removed (just delete the "libs" directory). Please note LibMovable-1.0
-is required for the "/oufa" chat command.
+Though oUF_Adirelle embeds and uses some libraries, they are all optional and could be safely removed (just delete the "libs" directory). Please note the "/oufa" command yet requires LibMovable-1.0 to work.
 
 h2. Features
 
@@ -26,19 +19,22 @@ h3. Features common to both group and single unit frames
 ** blue: low mana,
 * glowing border based on threat status, using built-in Blizzard colors,
 * display raid target icons,
-* shows raid/party roles, either assigned by LFD tool or rolecheck, either by guessing from class and talents,
+* shows raid/party roles, either assigned by LFD tool or rolecheck,
 * displays important debuff for some PvE encounters (Ulduar, Coliseum and Ice Crown Citadel),
 * fades out of range targets, using spell range checks (which is a bit more accurate than generic range checking),
-* display incoming heals.
-* *New* since 1.6-beta-8: you can use the "/oufa_health" (or "/oufah") chat command to set a health threshold, below which health bars are highlighted. Type "/oufa_health help" for detailled usage. _"/oufa_health 10k" might come handy for Chimaeron fight._
+* display incoming heals,
+* display "alternate power bars" (like the sound bar during Atramedes encounter),
+* automatically update your role in raids, based on your current spec,
+* You can use the "/oufa_health" (or "/oufah") chat command to set a health threshold, below which health bars are highlighted. Type "/oufa_health help" for detailled usage. _"/oufa_health 10k" might come handy for Chimaeron fight._
 
 h3. Group unit frames
 
 * health bar fills from right to left when unit loses life,
 * display important buffs (like tank cooldowns, feign death, iceblock, ...),
-* display curable debuffs,
-* display small icons in corners for heal related auras,
-* ready check icon,
+* display curable debuffs in the center of the frame ; debuffs you can dispell are opaque, debuffs you cannot are half transparent.
+* displat important debuffs (boss debuff or PvP control abilities).
+* display small icons in corners for heal related auras.
+* ready check icon.
 * special status icon:
 ** skull: dead unit,
 ** lightning: disconnected unit,
@@ -46,7 +42,7 @@ h3. Group unit frames
 
 h3. Single unit frames
 
-* frames for player, pet, target, target of target and focus,
+* frames for player, pet, target, target of target, focus,
 * class-colored health bar for players, happiness-color health bar for hunters' pet,
 * display numerical health and power values,
 * display percentage health for elite/boss units,
@@ -57,13 +53,16 @@ h3. Single unit frames
 * show PvP status,
 * smart aura display depending on unit reaction,
 * when in group, displays a small threat bar on target frame,
-* *new in 1.2-beta-3*: optional casting bars on target, focus and pet frames; controlled by the "show cast bars on targets" option in Blizzard combat panel.
+* optional casting bars on target, focus and pet frames; controlled by the "show cast bars on targets" option in Blizzard combat panel.
+
+h3. Other frames
+
+Boss and arena enemy frames are available in separate addons. They uses and requires oUF_Adirelle_Single.
 
 h2. Library related features
 
 The following feature are available using libraries:
 
-* fast health updating: LibQuickHealth-2.0 (provided).
 * bar texturing: "LibSharedMedia-3.0":http://wow.curse.com/downloads/wow-addons/details/libsharedmedia-3-0.aspx (provided).
 * frame positionning and "ConfigMode":http://www.wowwiki.com/ConfigMode support: LibMovable-1.0 (provided).
 * PvP crowd control icons: "DRData-1.0":http://wow.curse.com/downloads/wow-addons/details/drdata-1-0.aspx (provided).
